feat: implement SupplierStats dashboard (backend + frontend)
- Added backend endpoint to compute supplier statistics including:
  - Total suppliers, active count, new this month
  - Average rating, total spending, avg order value
  - Top supplier, on-time delivery rate
  - Monthly growth trends
- Integrated frontend dashboard to display supplier KPIs and trends
- Handled null safety and growth calculations for numeric/stat fields